feat: manualni spusteni email importu snidani z nastaveni
